<resources>
    <string name="app_name">TrabalhoFinal</string>
    <string name="action_settings">Settings</string>

    <string name="lista_utentes_fragment_label">Utentes</string>
    <string name="lista_vacinas_fragment_label">Vacinas</string>
    <string name="lista_doses_fragment_label">Doses</string>
    <string name="novo_utente_fragment_label">Novo Utente</string>
    <string name="editar_utente_fragment_label">Editar Utente</string>
    <string name="apagar_utente_fragment_label">Apagar o Utente</string>
    <string name="ver_dados_utente_fragment_label">Dados do Utente</string>
    <string name="menu_principal_fragment_label">Armazém de Vacinas</string>
    <string name="nova_vacina_fragment_label">Nova Vacina</string>
    <string name="editar_vacina_fragment_label">Editar Vacina</string>
    <string name="aumentar_stock_vacina_fragment_label">Aumentar o Stock da Vacina</string>
    <string name="nova_dose_fragment_label">Aumentar o Stock da Vacina</string>

    <string name="novo_utente">Novo Utente</string>
    <string name="editar_utente">Editar Utente</string>
    <string name="nova_dose">Nova Dose</string>
    <string name="ver_doses_do_utente">Ver Doses do Utente</string>
    <string name="ver_dados_utentes">Ver os Dados do Utente</string>
    <string name="apagar_o_utente">Apagar o Utente</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="email">Email</string>
    <string name="morada">Morada</string>
    <string name="data_nascimento">Data de Nascimento</string>
    <string name="versao">Armazem de Vacinas v. 1.0</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="preencha_nome">Preencha o nome</string>
    <string name="preencha_telefone">Preencha o telefone</string>
    <string name="preencha_email">Preencha o email</string>
    <string name="preencha_morada">Preencha a morada</string>
    <string name="preencha_data_nascimento">Preencha a data de nascimento</string>
    <string name="erro_inserir_utente">Erro ao inserir utente</string>
    <string name="utente_guardado_sucesso">Utente guardado com sucesso</string>
    <string name="erro_editar_utente">Erro ao editar utente</string>
    <string name="erro_apagar_utente">Erro ao apagar utente</string>
    <string name="utente_apagado_sucesso">Utente apagado com sucesso</string>
    <string name="voltar">Voltar</string>
    <string name="menu_principal">Menu Principal</string>
    <string name="utentes">Utentes</string>
    <string name="doses">Doses</string>
    <string name="vacinas">Vacinas</string>
    <string name="nova_vacina">Nova Vacina</string>
    <string name="editar_vacina">Editar Vacina</string>
    <string name="aumentar_stock">Aumentar o stock da vacina</string>
    <string name="nome_da_vacina">Nome da Vacina</string>
    <string name="email_fornecedor">Email do Fornecedor</string>
    <string name="stock_inicial">Stock Inicial</string>
    <string name="preencha_nome_vacina">Preencha o nome da vacina</string>
    <string name="preencha_email_fornecedor">Preencha o email do fornecedor </string>
    <string name="preencha_stock_inicial">Preencha o stock inicial</string>
    <string name="preencha_stock">Preencha o stock</string>
    <string name="erro_inserir_vacina">Erro ao inserir vacina</string>
    <string name="vacina_guardada_sucesso">Vacina guardada com sucesso</string>
    <string name="erro_editar_vacina">Erro ao editar vacina</string>
    <string name="quantidade">Quantidade</string>
    <string name="stock_aumentado_sucesso">Stock aumentado com sucesso</string>
    <string name="erro_aumentar_stock">Erro ao aumenatr o stock</string>
    <string name="preencha_quantidade">Preencha a quantidade</string>
    <string name="valor_invalido">Preencha com um valor superior a 0</string>
    <string name="erro_inserir_dose">Erro ao inserir dose</string>
    <string name="dose_guardada_sucesso">Dose guardada com sucesso</string>
    <string name="nao_apagar_utente">Não é possivel apagar este utente</string>
</resources>