<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pt.ipg.trabalhofinal.MainActivity">
    <item
        android:id="@+id/action_novo_utente"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/novo_utente"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_editar_utente"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/editar_utente"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_nova_dose"
        android:title="@string/nova_dose" />
    <item
        android:id="@+id/action_ver_doses_utente"
        android:title="@string/ver_doses_do_utente" />
    <item
        android:id="@+id/action_ver_todas_doses"
        android:title="@string/ver_todas_as_doses" />
    <item
        android:id="@+id/action_ver_stock_vacinas"
        android:title="@string/ver_o_stock_de_vacinas" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>